--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
    
 </head>
 <body>
-    
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div></div>
     <script src="main.js"></script>
 </body>
 </html>
