--- a/index.html
+++ b/index.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Jeu de Bataille</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-   
+
 </head>
+
 <body>
-    <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div></div>
+    <section class="haut">
+        <h1>Jeu de Bataille</h1>
+    </section>
+    <section class="milieu">
+        <div class="block-j1">
+            <div class="name-j1">Joueur 1</div>
+            <div class="container-j1">
+                <div>1</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div class="block-bataille">
+            <div class="carte-j1"></div>
+            <div class="carte-j2"></div>
+        </div>
+        <div class="block-j2">
+            <div class="name-j2">Joueur 2</div>
+            <div class="container-j2">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </section>
+    <section class="bas">
+        <div class="score1">SCORE 1
+            <div class="score1-input"></div>
+        </div>
+        <div class="score2">SCORE 2
+            <div class="score2-input"></div>
+        </div>
+    </section>
+
     <script src="main.js"></script>
 </body>
+
 </html>
