--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="block-j1">
             <div class="name-j1">Joueur 1</div>
             <div class="container-j1">
-                <div>1</div>
+                <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
