--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
         </div>
         <div class="block-bataille">
-            <div class="carte-j1"></div>
-            <div class="carte-j2"></div>
+            <div class="carte-j1"><img src="images/PNG/animalscard.jpeg" /></div>
+            <div class="carte-j2"><img src="images/PNG/animalscard.jpeg" /></div>
         </div>
         <div class="block-j2">
             <div class="name-j2">Joueur 2</div>
