--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
             </div>
         </div>
         <div class="block-bataille">
+
             <div class="carte-j1"><img src="images/PNG/animalscard.jpeg" /></div>
             <div class="carte-j2"><img src="images/PNG/animalscard.jpeg" /></div>
+
+
+
         </div>
         <div class="block-j2">
             <div class="name-j2">Joueur 2</div>
@@ -42,10 +46,13 @@
     </section>
     <section class="bas">
         <div class="score1">SCORE 1
-            <div class="score1-input"></div>
+            <div class="score1-input">0</div>
         </div>
+        
+            <button id="combat">THROW IN</button>
+        
         <div class="score2">SCORE 2
-            <div class="score2-input"></div>
+            <div class="score2-input">0</div>
         </div>
     </section>
 
