--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <div class="block-j1">
             <div class="name-j1">Joueur 1</div>
             <div class="container-j1">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                    <div id="cardP1-1"></div>
+                    <div id="cardP1-2"></div>
+                    <div id="cardP1-3"></div>
+                    <div id="cardP1-4"></div>
+                    <div id="cardP1-5"></div>
             </div>
         </div>
         <div class="block-bataille">
 
-            <div class="carte-j1"><img src="images/PNG/animalscard.jpeg" /></div>
-            <div class="carte-j2"><img src="images/PNG/animalscard.jpeg" /></div>
+            <div class="carte-j1"><img id="carte-img-j1" src="images/PNG/animalscard.jpeg" /></div>
+            <div class="carte-j2"><img id="carte-img-j2" src="images/PNG/animalscard.jpeg" /></div>
 
 
 
@@ -36,11 +36,11 @@
         <div class="block-j2">
             <div class="name-j2">Joueur 2</div>
             <div class="container-j2">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div id="cardP2-1"></div>
+                <div id="cardP2-2"></div>
+                <div id="cardP2-3"></div>
+                <div id="cardP2-4"></div>
+                <div id="cardP2-5"></div>
             </div>
         </div>
     </section>
