--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="block-j1">
             <div class="name-j1">Joueur 1</div>
             <div class="container-j1">
+                    <div id="cardP1-0"></div>
                     <div id="cardP1-1"></div>
                     <div id="cardP1-2"></div>
                     <div id="cardP1-3"></div>
                     <div id="cardP1-4"></div>
-                    <div id="cardP1-5"></div>
             </div>
         </div>
         <div class="block-bataille">
@@ -36,11 +36,11 @@
         <div class="block-j2">
             <div class="name-j2">Joueur 2</div>
             <div class="container-j2">
+                <div id="cardP2-0"></div>
                 <div id="cardP2-1"></div>
                 <div id="cardP2-2"></div>
                 <div id="cardP2-3"></div>
                 <div id="cardP2-4"></div>
-                <div id="cardP2-5"></div>
             </div>
         </div>
     </section>
@@ -48,8 +48,10 @@
         <div class="score1">SCORE 1
             <div class="score1-input">0</div>
         </div>
-        
+        <button id="melange1">SHUFFLE</button>
+        <button id="distrib1">DISTRIBUTE</button>
             <button id="combat">THROW IN</button>
+            <button id="reset1">RESET</button>
         
         <div class="score2">SCORE 2
             <div class="score2-input">0</div>
