--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
         <div class="block-bataille">
 
-            <div class="carte-j1"><img id="carte-img-j1" src="images/PNG/animalscard.jpeg" /></div>
-            <div class="carte-j2"><img id="carte-img-j2" src="images/PNG/animalscard.jpeg" /></div>
+            <div class="carte-j1"><img id="carte-img-j1" src="images/Mechanic+Deck.gif" /></div>
+            <div class="carte-j2"><img id="carte-img-j2" src="images/Mechanic+Deck.gif" /></div>
 
 
 
