click to select functionnal and displaying too

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 
             <div class="carte-j1"><img id="carte-img-j1" src="images/Mechanic+Deck.gif" /></div>
             <div class="carte-j2"><img id="carte-img-j2" src="images/Mechanic+Deck.gif" /></div>
+            <button id="combat">THROW IN</button>
 
 
 
         </div>
         <div class="block-j2">
-            <div class="name-j2">Joueur 2</div>
+            <div class="name-j2">I.A. Diogo</div>
             <div class="container-j2">
                 <div id="cardP2-0"></div>
                 <div id="cardP2-1"></div>
@@ -50,7 +51,7 @@
         </div>
         <button id="melange1">SHUFFLE</button>
         <button id="distrib1">DISTRIBUTE</button>
-            <button id="combat">THROW IN</button>
+           
             <button id="reset1">RESET</button>
         
         <div class="score2">SCORE 2
